--- a/server/public/assets/views/index.html
+++ b/server/public/assets/views/index.html
@@ -6,6 +6,8 @@
     <!-- Styles-->
     <link rel = "stylesheet" href = "vendors/angular-material.min.css">
     <link rel="stylesheet" href="/vendors/ui-grid.min.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+          rel="stylesheet">
     <link rel="stylesheet" href="/assets/styles/style.css">
 
     <!-- Scripts-->
