--- a/server/public/assets/views/routes/inputSchedule.html
+++ b/server/public/assets/views/routes/inputSchedule.html
@@ -7,26 +7,45 @@
 <div>
     <h1>Create New Calendar</h1>
     <form id = "scheduleInput" class="centered flex-offset-25">
-        <md-input-container>
-            <!--<div class = "create-calendar" layout="row">-->
+        <div class = "new-calendar" layout="row" layout-align="space-between-center">
+            <md-input-container class = new-calendar-input>
+                <!--<div class = "create-calendar" layout="row">-->
                 <label>Calendar Name</label>
                 <input type = "text" ng-model="newCalendar.summary">
-            <!--</div>-->
-        </md-input-container>
-        <md-button class="md-raised" ng-click = createCalendar()>Create New Calendar</md-button>
+                <!--</div>-->
+            </md-input-container>
+            <md-button class="md-raised" ng-click = createCalendar()>Create New Calendar</md-button>
+        </div>
+
 
         <div class = "create-schedule">
             <h1>Input Schedule</h1>
-            <md-input-container>
+
                 <label>Calendar Name</label>
                 <select ng-model = "selectedCalendar.calendar" ng-options="calendar.summary for calendar in currentCalendars"
                         ng-change="getEvents(selectedCalendar.calendar)"></select>
-            </md-input-container>
 
-            <label for = "newGame">New Game</label>
-            <input type = "datetime-local" ng-model = "newGame.date" id = "newGame">
-            <label for = "gameLocation">Location</label>
-            <input type = "text" ng-model = "newGame.location" id = "gameLocation" placeholder="Enter location here">
+
+
+            <!--<md-content>-->
+                <!--<label>New Game</label>-->
+                <!--<md-datepicker type ="datetime-local" class="new-date" ng-model="newGame.date" md-placeholder="Enter date"></md-datepicker>-->
+                <!--&lt;!&ndash;<label>Enter Date</label>&ndash;&gt;-->
+                <!--&lt;!&ndash;<input type = "datetime-local" ng-model = "newGame.date">&ndash;&gt;-->
+            <!--</md-content>-->
+            <div class = "game-datetime">
+                <label for = "newGame">New Game</label>
+                <input type = "datetime-local" ng-model = "newGame.date" id = "newGame">
+            </div>
+            <div layout-align="center">
+                <md-input-container layout-align="center" class="location" flex-offset="25">
+                    <i class="material-icons">add_location</i>
+                    <label>Enter Location</label>
+                    <input type = "text" ng-model = "newGame.location">
+                </md-input-container>
+            </div>
+
+
             <input type = "submit" value = "submit" ng-click = "inputGame(newGame)">
             <input type = "submit" value = "Schedule Complete" ng-click = "scheduleComplete()">
         </div>
