--- a/client/views/index.html
+++ b/client/views/index.html
@@ -35,7 +35,7 @@
             gapi.load('auth2', function() {
 //                auth2 = gapi.getAuthInstance({
                 auth2 = gapi.auth2.init({
-                    client_id: '1014545251900-anab20hkgicb30gpsgu7q7vb47pnr326.apps.googleusercontent.com',
+                    client_id: CLIENT_ID,
                     // Scopes to request in addition to 'profile' and 'email'
                     scope: scopes
 //                    callbackUrl: "http://www.localhost5000/playerAttendance"
